--- a/css/style.css
+++ b/css/style.css
@@ -236,3 +236,10 @@ table td {
 .qpos-bg1{
   background-color: #F2D8A6;
 }
+
+.qpos-bg2{
+  background-color: #5B4140;
+}
+.qpos-bg3{
+  background-color: #CE8032;
+}
